app1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app1
  labels:
    app: app1

spec:
  containers:
  - name: iperf-alpine
    image: johnkday/contiv-test-container
