db1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db1
  labels:
    app: db-epg
    io.contiv.tenant: default
    io.contiv.network: default-net
    io.contiv.net-group: db
spec:
  containers:
  - name: iperf-alpine
    image: johnkday/contiv-test-container
