service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: app-epg
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30002
