denyalltodb.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: db-deny-all
spec:
  podSelector:
    matchLabels:
      app: db
  ingress: []
